force-app/main/default/objects/Transaction__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF (
    AND (
								NOT(ISBLANK(Income__c)),
								NOT(ISBLANK(Outcome__c))
    ),
				TEXT(Outcome_Bank_Account__r.CurrencyIsoCode) + &apos; &apos; +  TEXT(Outcome__c) + &apos; (&apos; + Outcome_Bank_Account__r.Name + &apos;)&apos; + &apos; -&gt; &apos; + TEXT(Income_Bank_Account__r.CurrencyIsoCode) + &apos; &apos; +  TEXT(Income__c) + &apos; (&apos; + Income_Bank_Account__r.Name + &apos;)&apos;,
				IF (
								NOT(ISBLANK(Income__c)),
								TEXT(Income_Bank_Account__r.CurrencyIsoCode) + &apos; &apos; +  TEXT(Income__c) + &apos; (&apos; + Income_Bank_Account__r.Name + &apos;)&apos;,
								TEXT(Outcome_Bank_Account__r.CurrencyIsoCode) + &apos; &apos; +  TEXT(Outcome__c) + &apos; (&apos; + Outcome_Bank_Account__r.Name + &apos;)&apos;
				)
)</formula>
    <label>Amount</label>
    <type>Text</type>
</CustomField>