force-app/main/default/objects/Transaction__c/fields/Apply_To__c.field-meta.xml
<CustomField>
    <fullName>Apply_To__c</fullName>
    <label>Apply To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>