force-app/main/default/objects/Transaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF (
    AND (
								NOT(ISBLANK(Income__c)),
								NOT(ISBLANK(Outcome__c))
    ),
				&apos;Transfer&apos;,
				IF (
								NOT(ISBLANK(Income__c)),
								TEXT(Income_Category__c),  
								TEXT(Outcome_Category__c)
				)
)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>