force-app/main/default/objects/Transaction__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compensation</label>
    <referenceTo>Compensation__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>