force-app/main/default/objects/Transaction__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Used for applying transactions to relevant month</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>