force-app/main/default/objects/Transaction__c/fields/Effective_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Effective_Distribution__c</fullName>
    <label>Effective Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
                <default>true</default>
                <label>Month</label>
            </value>
            <value>
                <fullName>Quater</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>