force-app/main/default/objects/Transaction__c/fields/Entity_Revenue_Stat_Income__c.field-meta.xml
<CustomField>
    <fullName>Entity_Revenue_Stat_Income__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Revenue Stat (Income)</label>
    <referenceTo>Entity_Revenue_Stat__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>