force-app/main/default/objects/Transaction__c/fields/Entity_Revenue_Stat_Spending__c.field-meta.xml
<CustomField>
    <fullName>Entity_Revenue_Stat_Spending__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Revenue Stat (Spending)</label>
    <referenceTo>Entity_Revenue_Stat__c</referenceTo>
    <relationshipLabel>Spendings</relationshipLabel>
    <relationshipName>Spendings</relationshipName>
    <type>Lookup</type>
</CustomField>