force-app/main/default/objects/Transaction__c/fields/Expense_Region__c.field-meta.xml
<CustomField>
    <fullName>Expense_Region__c</fullName>
    <label>Expense Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Common</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>