force-app/main/default/objects/Transaction__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <formula>IF (
    AND (
								NOT(ISBLANK(Income__c)),
								NOT(ISBLANK(Outcome__c))
    ),
				IMAGE(&quot;/resource/TransactionIcons/transfer.png?v=3&quot;, &quot;Icon&quot;),
				IF (
								NOT(ISBLANK(Income__c)),
								IMAGE(&quot;/resource/TransactionIcons/income.png?v=3&quot;, &quot;Icon&quot;),
								IMAGE(&quot;/resource/TransactionIcons/outcome.png?v=3&quot;, &quot;Icon&quot;)
				)
)</formula>
    <label>Icon</label>
    <type>Text</type>
</CustomField>