force-app/main/default/objects/Transaction__c/fields/Income_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Income_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Income Transactions</relationshipLabel>
    <relationshipName>Income_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>