force-app/main/default/objects/Transaction__c/fields/Income_Category__c.field-meta.xml
<CustomField>
    <fullName>Income_Category__c</fullName>
    <label>Income Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>