force-app/main/default/objects/Transaction__c/fields/Income_USD__c.field-meta.xml
<CustomField>
    <fullName>Income_USD__c</fullName>
    <label>Income USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>