force-app/main/default/objects/Transaction__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>