force-app/main/default/objects/Transaction__c/fields/Outcome_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Outcome Transactions</relationshipLabel>
    <relationshipName>Outcome_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>