force-app/main/default/objects/Transaction__c/fields/Outcome_Category__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Category__c</fullName>
    <label>Outcome Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Business Trip</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Legal and Accounting</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Dividends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>