force-app/main/default/objects/Transaction__c/fields/Sync_Needed__c.field-meta.xml
<CustomField>
    <fullName>Sync_Needed__c</fullName>
    <formula>OR(
   ISNULL(Last_Synced__c),
    LastModifiedDate &gt; Last_Synced__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync Needed</label>
    <type>Checkbox</type>
</CustomField>