force-app/main/default/objects/Transaction__c/fields/Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category__c</fullName>
    <label>Tax Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Unit-related</fullName>
            </value>
            <value>
                <fullName>Person-related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>