force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Income__c</columns>
    <columns>Income_Bank_Account__c</columns>
    <columns>Income_Category__c</columns>
    <columns>Outcome__c</columns>
    <columns>Outcome_Bank_Account__c</columns>
    <columns>Outcome_Category__c</columns>
    <columns>Date__c</columns>
    <columns>Person__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>