force-app/main/default/objects/Transaction__c/listViews/Income.listView-meta.xml
<ListView>
    <fullName>Income</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Income__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Outcome__c</field>
        <operation>equals</operation>
    </filters>
    <label>Income</label>
</ListView>