force-app/main/default/objects/Transaction__c/listViews/Outcome.listView-meta.xml
<ListView>
    <fullName>Outcome</fullName>
    <columns>NAME</columns>
    <columns>Person__c</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>Outcome__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Income__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Outcome__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Outcome</label>
</ListView>