force-app/main/default/objects/Transaction__c/listViews/Transfer.listView-meta.xml
<ListView>
    <fullName>Transfer</fullName>
    <columns>NAME</columns>
    <columns>Outcome__c</columns>
    <columns>Outcome_Bank_Account__c</columns>
    <columns>Income__c</columns>
    <columns>Income_Bank_Account__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Income__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Outcome__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Transfer</label>
</ListView>